--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "NADEEN-MD",
   "description": "Javascript WhatsApp bot made by NADEEN POORNA",
-  "logo": "https://i.imgur.com/AzQrKon.png",
+  "logo": "https://files.catbox.moe/2nmi9q.png",
   "keywords": ["bot"],
   "success_url": "/",
 
