--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "NADEEN-MD",
+  "name": "THIWANKA-MD",
   "version": "1.0.5",
-  "description": "NADEEN-POORNA has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️ ",
+  "description": "THIWANKA-NIMSARA has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️ ",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name nadeen",
-    "stop": "pm2 stop nadeen-md",
-    "restart": "pm2 restart nadeen-md"
+    "start": "pm2 start index.js --deep-monitoring --attach --name thiwanka",
+    "stop": "pm2 stop thiwanka-md",
+    "restart": "pm2 restart thiwanka-md"
  },
   "dependencies": {
     "@whiskeysockets/baileys": "6.7.8",
