--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "NADEEN-MD",
-  "description": "Javascript WhatsApp bot made by NADEEN POORNA",
+  "name": "THIWANKA-MD",
+  "description": "Javascript WhatsApp bot made by THIWANKA NIMSARA",
   "logo": "https://files.catbox.moe/2nmi9q.png",
   "keywords": ["bot"],
   "success_url": "/",
